layer.conf: Add "thud" support
Just add "thud" to LAYERSERIES_COMPAT

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,4 +2,4 @@
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb"
 BBFILE_COLLECTIONS += "dyplo-layer"
 BBFILE_PATTERN_dyplo-layer := "^${LAYERDIR}/"
-LAYERSERIES_COMPAT_dyplo-layer = "pyro rocko sumo"
+LAYERSERIES_COMPAT_dyplo-layer = "pyro rocko sumo thud"
