layer.conf: Add "mickledore" compatibility
Missed a branch, also tested with mickledore now (for layerscape).

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,4 +2,4 @@
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb"
 BBFILE_COLLECTIONS += "dyplo-layer"
 BBFILE_PATTERN_dyplo-layer := "^${LAYERDIR}/"
-LAYERSERIES_COMPAT_dyplo-layer = "honister kirkstone langdale nanbield"
+LAYERSERIES_COMPAT_dyplo-layer = "honister kirkstone langdale mickledore nanbield"
